force-app/main/default/objects/Reservation__c/Reservation__c.object-meta.xml
<CustomObject>
    <label>Reservation</label>
    <pluralLabel>Reservations</pluralLabel>
    <nameField>
        <label>Reservation Number</label>
        <type>AutoNumber</type>
        <displayFormat>RES-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>