force-app/main/default/objects/Reservation__c/fields/Assigned_Table_Slot__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Table_Slot__c</fullName>
    <label>Assigned Table Slot</label>
    <type>Lookup</type>
    <referenceTo>Restaurant_Slot__c</referenceTo>
    <relationshipName>Slot_Reservations</relationshipName>
    <relationshipLabel>Slot Reservations</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>