force-app/main/default/objects/Reservation__c/fields/Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Locked__c</fullName>
    <label>Is Locked</label>
    <type>Checkbox</type>
    <formula>(Reservation_DateTime__c - NOW()) &lt; 0.0416</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>