force-app/main/default/objects/Reservation__c/fields/Modification_Count__c.field-meta.xml
<CustomField>
    <fullName>Modification_Count__c</fullName>
    <label>Modification Count</label>
    <defaultValue>0</defaultValue>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>