force-app/main/default/objects/Reservation__c/fields/Original_Reservation_Id__c.field-meta.xml
<CustomField>
    <fullName>Original_Reservation_Id__c</fullName>
    <label>Original Reservation</label>
    <type>Lookup</type>
    <referenceTo>Reservation__c</referenceTo>
    <relationshipName>Modified_Reservations</relationshipName>
    <relationshipLabel>Modified Reservations</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>