force-app/main/default/objects/Reservation__c/fields/Reservation_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Reservation_DateTime__c</fullName>
    <label>Reservation Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>