force-app/main/default/objects/Reservation__c/fields/Restaurant__c.field-meta.xml
<CustomField>
    <fullName>Restaurant__c</fullName>
    <label>Restaurant</label>
    <required>true</required>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Restaurant_Reservations</relationshipName>
    <relationshipLabel>Restaurant Reservations</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>